# noise-gator

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
.github/actions/bundle-ort/: action.yml
.github/workflows/: release.yml  rust.yml
src/: main.rs
src/audio/: device.rs  mod.rs  pipeline.rs  resample.rs
src/config/: cli.rs  mod.rs
src/driver/: macos.rs  mod.rs  windows.rs
src/dsp/: autogain.rs  deepfilter.rs  denoise.rs  energy_vad.rs  eq.rs  gate.rs  highpass.rs  mod.rs
src/models/: mod.rs
src/tray/: menu.rs  mod.rs
src/ui/: settings.rs  window.rs
