[package]
name = "noise-gator"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Lightweight real-time microphone noise cancellation via system tray"
license = "MIT"

[[bin]]
name = "noise-gator"
path = "src/main.rs"

[dependencies]
# Audio I/O (WASAPI on Windows, CoreAudio on macOS, ALSA/Pulse on Linux)
cpal = "0.17"

# RNNoise ML denoiser — pure Rust port, model weights bundled
nnnoiseless = { version = "0.5", default-features = false }

# Lock-free ring buffer for inter-thread audio
ringbuf = "0.4"

# Sample rate conversion
rubato = { version = "2", features = ["fft_resampler"] }
audioadapter-buffers = "3"

# System tray (lightweight, no web runtime)
tray-icon = "0.22"
muda = "0.17"

# Event loop for tray (cross-platform)
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Config file
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for driver download (native-tls avoids ring/gcc dependency)
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "blocking"] }

# Ctrl+C handling for headless mode
ctrlc = "3"

# DeepFilterNet inference — optional, only pulled in with `deepfilter` feature
tract-onnx = { version = "0.21", optional = true }
rustfft = { version = "6", optional = true }
ndarray = { version = "0.16", optional = true }

# SHA256 hash verification for downloaded model files
sha2 = { version = "0.10", optional = true }

# Archive extraction for model downloads
flate2 = "1"
tar = "0.4"

# PNG decoding for tray icon
image = { version = "0.25", default-features = false, features = ["png"] }

# Platform-specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
] }

[features]
default = ["deepfilter"]
deepfilter = ["dep:tract-onnx", "dep:rustfft", "dep:ndarray", "dep:sha2"]

[build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
