[package]
name = "noise-gator"
version = "0.1.2"
edition = "2024"
rust-version = "1.85"
description = "Lightweight real-time microphone noise cancellation via system tray"
license = "MIT"

[[bin]]
name = "noise-gator"
path = "src/main.rs"

[dependencies]
# Audio I/O (WASAPI on Windows, CoreAudio on macOS, ALSA/Pulse on Linux)
cpal = "0.17"

# RNNoise ML denoiser — pure Rust port, model weights bundled
nnnoiseless = { version = "0.5", default-features = false }

# Lock-free ring buffer for inter-thread audio
ringbuf = "0.4"

# Sample rate conversion
rubato = { version = "2", features = ["fft_resampler"] }
audioadapter-buffers = "3"

# System tray (lightweight, no web runtime)
tray-icon = "0.22"
muda = "0.17"

# Event loop for tray (cross-platform)
winit = { version = "0.30", default-features = false, features = ["rwh_06", "x11"] }

# CLI argument parsing (tiny, no proc-macro)
pico-args = "0.5"

# Config file
serde = { version = "1", features = ["derive"] }
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for downloads (lightweight blocking client, no async runtime)
ureq = { version = "3", features = ["native-tls"] }

# Ctrl+C handling for headless mode
ctrlc = "3"

# DeepFilterNet inference — optional, only pulled in with `deepfilter` feature
ort = { version = "=2.0.0-rc.10", optional = true, default-features = false, features = ["ndarray", "load-dynamic"] }
rustfft = { version = "6", optional = true }
ndarray = { version = "0.16", optional = true }

# SHA256 hash verification for downloaded model files
sha2 = { version = "0.10", optional = true }

# Archive extraction for model downloads (only needed for deepfilter model/ORT download)
flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }
zip = { version = "2", default-features = false, features = ["deflate"], optional = true }

# JSON parsing for GitHub API (only needed for ORT download)
serde_json = { version = "1", optional = true }

# PNG decoding for tray icon (lightweight, no full image crate)
png = "0.18"

# Settings window GUI (egui rendered via glow into a glutin-managed GL context)
egui = { version = "0.31", features = ["default_fonts"] }
egui-winit = "0.31"
egui_glow = { version = "0.31", features = ["winit"] }
glow = "0.16"
glutin = "0.32"
glutin-winit = "0.5"
raw-window-handle = "0.6"

# Platform-specific
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_Threading",
] }

[features]
default = ["deepfilter"]
deepfilter = ["dep:ort", "dep:rustfft", "dep:ndarray", "dep:sha2", "dep:flate2", "dep:tar", "dep:zip", "dep:serde_json"]

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"

# Fast optimized build for local testing (no LTO)
# Usage: cargo build --profile dev-release
[profile.dev-release]
inherits = "release"
lto = false
codegen-units = 16
strip = false
